--- a/PZ_Projekt/PZ_Projekt.csproj
+++ b/PZ_Projekt/PZ_Projekt.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <Folder Include="Views\Products\" />
+    <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
 </Project>
